app/assets/stylesheets/framework_and_overrides.scss
@import 'foundation/functions';
$dark-gray: #575757;
$medium-gray: #a8a8a8;
$light-gray: #d0d0d0;
$primary-color: #3a4d81;
$body-bg: #FFF;
$body-font-color: $dark-gray;
$body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
$body-font-weight: 300;

$header-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
$header-font-weight: 400;
// $header-font-style: normal;
$header-font-color: $dark-gray;
// $header-line-height: 1.4;
$header-top-margin: .4em;
// $header-bottom-margin: .5em;
// $header-text-rendering: optimizeLegibility;

// Heading font sizes

$h1-font-size: emCalc(38px);
$h2-font-size: emCalc(26px);
$h3-font-size: emCalc(21px);
$h4-font-size: emCalc(18px);
$h5-font-size: emCalc(15px);
$h6-font-size: 1em;

// $paragraph-font-family: inherit;
$paragraph-font-weight: 300;
// $paragraph-font-size: 1em;
// $paragraph-line-height: 1.6;
// $paragraph-margin-bottom: emCalc(20px);
// $paragraph-aside-font-size: emCalc(14px);
// $paragraph-aside-line-height: 1.35;
// $paragraph-aside-font-style: italic;

$button-tny: rem-calc(7);
$button-sml: rem-calc(9);
$button-med: rem-calc(11);
$button-lrg: rem-calc(14);

// $button-display: inline-block;
// $button-margin-bottom: emCalc(20px);

// $button-font-family: inherit;
// $button-font-color: #fff;
// $button-font-color-alt: #333;
// $button-font-med: emCalc(16px);
// $button-font-tny: emCalc(11px);
// $button-font-sml: emCalc(13px);
// $button-font-lrg: emCalc(20px);
$button-font-weight: 300;
// $button-font-align: center;
// $button-function-factor: 10%;
// $button-border-width: 1px;
$button-border-style: none;
// $button-border-color: darken($primary-color, $button-function-factor);
// $button-radius: $global-radius;
// $button-disabled-opacity: 0.6;
/* Background color for the top bar */
$topbar-bg: lighten($light-gray, 14%);

/* Height and margin */
$topbar-height: 48px;
$topbar-margin-bottom: rem-calc(30);

/* Control Input height for top bar */
$topbar-input-height: 2.45em;

/* Controlling the styles for the title in the top bar */
//$topbar-title-weight: bold;
//$topbar-title-font-size: rem-calc(17);

/* Style the top bar dropdown elements */
$topbar-dropdown-bg: lighten($medium-gray, 10%);
$topbar-dropdown-link-color: $dark-gray;
$topbar-dropdown-link-bg: lighten($medium-gray, 20%);
//$topbar-dropdown-toggle-size: 5px;
$topbar-dropdown-toggle-color: $medium-gray;
//$topbar-dropdown-toggle-alpha: 0.5;

/* Set the link colors and styles for top-level nav */
$topbar-link-color: $dark-gray;
//$topbar-link-color-hover: #fff;
//$topbar-link-color-active: #fff;
//$topbar-link-color-active-hover: #fff;
//$topbar-link-weight: normal;
//$topbar-link-font-size: rem-calc(13);
//$topbar-link-hover-lightness: -10%; // Darken by 10%
//$topbar-link-bg-color-hover: #555555;
$topbar-link-bg-hover: $primary-color;
//$topbar-link-bg-active: $primary-color;
//$topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
//$topbar-link-font-family: $body-font-family;
//
$topbar-dropdown-label-color: #555;
//$topbar-dropdown-label-text-transform: uppercase;
//$topbar-dropdown-label-font-weight: bold;
//$topbar-dropdown-label-font-size: rem-calc(10);

/* Top menu icon styles */
//$topbar-menu-link-transform: uppercase;
//$topbar-menu-link-font-size: rem-calc(13);
//$topbar-menu-link-weight: bold;
$topbar-menu-link-color: $medium-gray;
$topbar-menu-icon-color: $medium-gray;
//$topbar-menu-link-color-toggled: #888;
//$topbar-menu-icon-color-toggled: #888;

/* Transitions and breakpoint styles */
//$topbar-transition-speed: 300ms;
//$topbar-breakpoint: #{lower-bound($medium-range)} !default; // Change to 9999px for always mobile layout
//$topbar-media-query: $medium-up !default;

/* Divider Styles */
//$topbar-divider-border-bottom: solid 1px  scale-color($topbar-bg-color, $lightness: 13%);
//$topbar-divider-border-top: solid 1px scale-color($topbar-bg-color, $lightness: -50%);


// import the CSS framework
@import "foundation";
div.full-width {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  max-width: initial;
}
// override for the 'Home' navigation link
.top-bar .name {
  font-size: rem-calc(13);
  line-height: 45px; }
.top-bar .name a {
  font-weight: normal;
  color: white;
  padding: 0 15px; }
.top-bar {
  margin-bottom: rem-calc(20);
}
li.has-form form {
  padding-top: 2px;
}
@mixin success-link {
  color: $success-color;
  font-weight: 400;
}

a.success { @include success-link; }
#incomplete-jobs a.job { @include success-link; border-bottom: 1px dotted $success-color; }
#completed-jobs td { font-size: 80%; }

table {
  border-radius: 4px;
  tbody tr td {
    line-height: rem-calc(16);
    padding: rem-calc(5) rem-calc(1);
    input[type=checkbox] {
      margin-top: rem-calc(2);
      margin-bottom: 0;
      padding-bottom: 0;
    }
  }
  thead {
    a {
      font-weight: 300;
    }
  }
  &.no-border {
    border: none;
  }
}
.button {
  //@extend .radius;
}
// THESE ARE EXAMPLES YOU CAN MODIFY
// create mixins using Foundation classes
@mixin twelve-columns {
  @extend .small-12;
  @extend .columns;
  }
@mixin six-columns {
  @extend .small-12;
  @extend .large-6;
  @extend .columns;
}
@mixin six-columns-centered {
  @extend .small-6;
  @extend .columns;
  @extend .text-center;
  }
// create your own classes
// to make views framework-neutral
.column {
  @include six-columns-centered;
  }
.form {
  @include grid-column(6);
  }
.form-centered {
  @include six-columns-centered;
  }
.miniform {
  margin: 0; padding: 0;
  select, input {
    font-size: rem-calc(12px);
    margin: 0;
    padding: 2px;
    height: rem-calc(28px);
  }
  .tiny.button {
    padding-top: 7px;
  }
}
// apply styles to HTML elements
// to make views framework-neutral
main {
  @include twelve-columns;
  //background-color: #eee;
  }
section {
  @extend .row;
  margin-top: 20px;
  }
.form-actions {
  @extend .row;
}
label.boolean {
  line-height: rem-calc(6px);
  margin-bottom: 10px;
}
@mixin main_content {
  @extend .small-12;
  @extend .large-8;
  @extend .columns;
  }
@mixin side_content {
  @extend .small-12;
  @extend .large-4;
  @extend .columns;
  }

.main_content {
  @include main_content;
  table {
    width: 100%
  }
}
.side_content {
  @include side_content;
  table {
    width: 100%
  }
}
.job-container {
}
.task-container {
  background: white;
  padding-bottom: 20px;
  margin-bottom: 20px;
  .container {
    margin-bottom: 50px;
  }
}

.section {
  outline: 1px solid $medium-gray;
}
.section-header {
  background: $primary-color;
  color: $light-gray;
  padding: 0 5px;
  a {
    color: white;
  }
  h1,h2,h3,h4,h5,h6 {
    color: white;
  }
  h3,h4,h5,h6 {
    letter-spacing: 1px;
    font-weight: 100;
  }
}
.task-container .section-header {
  height: 50px;
  label {
    color: white;
    font-weight: 100;
    font-size: 12px;
    letter-spacing: 1px;
    line-height: 12px;
    margin:0;
    padding:0;
  }
  .tiny.button {
    padding: 2px 6px;
    margin-bottom: 4px;
  }
}

.fixed-height {
  width: 100%;
  height: 180px;
  overflow: auto;
}
.max-height {
  width: 100%;
  max-height: 180px;
  overflow: auto;
}

.column_6 {
  @include six-columns;
}
.column_6_centered {
  @include six-columns;
  @extend .large-offset-3;
}
.column_12 {
  @extend .large-12;
  @extend .columns;
}
.panel {
  @extend .radius;
  ul {
    li {
      font-size: emCalc(14px);
    }
  }
}
.hint {
  display: block;
  font-size: emCalc(12px);
  color: $medium-gray;
  font-style: oblique;
  margin-top: -8px;
  margin-bottom: 10px;
}

input.radio_buttons, input.boolean {
  margin-right: 6px;
}
dl.accordion dd.accordion-navigation {
  border: 1px solid $medium-gray;
  margin-bottom: 11px !important;
}
.smaller {
  font-weight: 300;
  font-size: emCalc(13px);
  line-height: emCalc(17px);
  color: $dark-gray;
}
@media only screen and (min-width: 680px) {
  span.hide-for-small {
    display: inline !important;
  }
}
table.full_width {
  width: 100%;
}

